--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 .todo-container{
   position: relative;
   left: 350px;
-  width: 60%;
+  width: 65%;
   margin: 50px 0; 
   padding: 0;
   display: flex;
@@ -79,6 +79,7 @@
 
 .todo-form-label{
   margin: 0 10px;
+  padding: 0;
   font-size: 1.5rem;
   color: rgba(46, 49, 49, 1);
 }
